Remove init container from logstash and job from secondary region.

--- a/code-gen/templates/common/base/cluster-tools/logging/remove-from-secondary-patch.yaml
+++ b/code-gen/templates/common/base/cluster-tools/logging/remove-from-secondary-patch.yaml
@@ -109,3 +109,22 @@ kind: ClusterRole
 metadata:
   name: os-elastic-stack-logging-proxy-role
 $patch: delete
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: logstash-elastic
+  namespace: elastic-stack-logging
+spec:
+  template:
+    spec:
+      initContainers:
+        - name: wait-for-bootstrap-completed
+          $patch: delete
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: opensearch-bootstrap
+  namespace: elastic-stack-logging
+$patch: delete
