--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/secret.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/secret.yaml
@@ -3,6 +3,10 @@ kind: Secret
 metadata:
   name: os-logstash-creds
   namespace: elastic-stack-logging
+  annotations:
+    sealedsecrets.bitnami.com/managed: "true"
+    sealedsecrets.bitnami.com/patch: "true"
+    argocd.argoproj.io/sync-options: Prune=false
 data:
   username: bG9nc3Rhc2g=
-  password: Ul0pXWdLPioxWCMtMQ==
+  password: Y3lTVEhHaUNmbTlObkdkMmNKRTFBbW9HdQ==
