--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/kustomization.yaml
@@ -20,4 +20,5 @@ generatorOptions:
   disableNameSuffixHash: true
   annotations:
     sealedsecrets.bitnami.com/managed: "true"
+    sealedsecrets.bitnami.com/patch: "true"
     argocd.argoproj.io/sync-options: Prune=false
