Add logstash secrets to customerhub

--- a/code-gen/templates/customer-hub/base/orig-secrets.yaml
+++ b/code-gen/templates/customer-hub/base/orig-secrets.yaml
@@ -179,4 +179,13 @@ metadata:
   namespace: prometheus
 data:
   api-key: ${OPSGENIE_API_KEY_BASE64}
+
+---
+
+# Logstash password to send logs to the opensearch
+apiVersion: v1
+kind: Secret
+metadata:
+  name: os-logstash-creds
+  namespace: elastic-stack-logging
 ---
