--- a/k8s-configs/cluster-tools/base/monitoring/newrelic/configmap.yaml
+++ b/k8s-configs/cluster-tools/base/monitoring/newrelic/configmap.yaml
@@ -392,6 +392,8 @@ data:
         - integrations_filter:
             enabled: false
           job_name_prefix: newrelic
+          tls_config:
+            insecure_skip_verify: true
           target_discovery:
             endpoints: true
             filter:
