--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/cluster.yaml
@@ -76,8 +76,12 @@ spec:
         ["openid", "basicauth"]
       opensearch.requestHeadersAllowlist: |
         ["authorization", "securitytenant"]
+      opensearch_security.multitenancy.tenants.preferred: |
+        ["Private", "customer"]
+      opensearch_security.multitenancy.tenants.enable_global: "true"
+      opensearch_security.multitenancy.tenants.enable_private: "false"
       opensearch_security.openid.trust_dynamic_headers: "true"
-      opensearch_security.multitenancy.enabled: "false"
+      opensearch_security.multitenancy.enabled: "true"
       opensearch_security.openid.connect_url: "${OPENID_CONNECT_URL}"
       opensearch_security.openid.client_id: "${OPENID_CLIENT_ID}"
       opensearch_security.openid.client_secret: "${OPENID_CLIENT_SECRET}"
