--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
@@ -335,3 +335,7 @@ customer_role:
     - "global_tenant"
     allowed_actions:
     - "kibana_all_read"
+  - tenant_patterns:
+    - "customer"
+    allowed_actions:
+    - "*"
