--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch-operator/crd/opensearch-operator-crds.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch-operator/crd/opensearch-operator-crds.yaml
@@ -84,6 +84,7 @@ spec:
     subresources:
       status: {}
 ---
+# Source: opensearch-operator/templates/opensearch-operator-crds.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
