Add tenant permissions to osd-bootstrap

--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
@@ -302,6 +302,11 @@ bootstrap:
       allowed_actions:
         - 'crud'
         - 'create_index'
+  tenant_permissions:
+  - tenant_patterns:
+    - "global_tenant"
+    allowed_actions:
+    - "kibana_all_write"
 
 read_prometheus:
   reserved: true
