Update roles and cluster config

--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
@@ -327,8 +327,8 @@ customer_role:
   reserved: false
   hidden: false
   cluster_permissions:
-  - "cluster_composite_ops_ro"
-  - "kibana_all_read"
+  - "kibana_all_read" # action group
+  - "cluster:admin/opensearch/notifications/*" # direct permissions attach
   index_permissions:
   - index_patterns:
     - "*"
@@ -343,4 +343,4 @@ customer_role:
   - tenant_patterns:
     - "customer"
     allowed_actions:
-    - "*"
+    - "kibana_all_write"
