--- a/k8s-configs/cluster-tools/base/monitoring/prometheus/kustomization.yaml
+++ b/k8s-configs/cluster-tools/base/monitoring/prometheus/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
 - prometheus-agent-config.yaml
 - prometheus-agent.yaml
 - opsgenie-key.yaml
+- adapter
 
 configMapGenerator:
 - name: prometheus-environment-variables
