--- a/k8s-configs/cluster-tools/base/ingress/nginx/public/hpa.yaml
+++ b/k8s-configs/cluster-tools/base/ingress/nginx/public/hpa.yaml
@@ -1,12 +1,35 @@
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: nginx-ingress-controller
 spec:
-  minReplicas: 3
+  minReplicas: 1
   maxReplicas: 3
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: nginx-ingress-controller
-  targetCPUUtilizationPercentage: 70
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 50
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 50
+    - type: Object
+      object:
+        describedObject:
+          kind: Ingress
+          apiVersion: networking.k8s.io/v1
+          name: pingaccess-was-ingress
+        metric:
+          name: requests-per-second
+        target:
+          type: Value
+          value: 10k
