--- a/k8s-configs/cluster-tools/base/monitoring/prometheus/adapter/configmap.yaml
+++ b/k8s-configs/cluster-tools/base/monitoring/prometheus/adapter/configmap.yaml
@@ -17,9 +17,9 @@ data:
   config.yaml: |
     rules:
       - seriesQuery: 'nginx_ingress_controller_nginx_process_requests_total{kubernetes_namespace=~"ingress.+"}'
-        name: {as "requests-per-second"}
+        name: {as: "requests-per-second"}
         resource:
           overrides:
-            namespace: {resource "kubernetes_namespace"}
-            pod: {resource "controller_pod"}
+            namespace: {resource: "kubernetes_namespace"}
+            pod: {resource: "controller_pod"}
         metricsQuery: 'sum(rate(nginx_ingress_controller_nginx_process_requests_total{kubernetes_namespace=~"ingress.+"}[5m])) by (controller_pod)'
