--- a/k8s-configs/cluster-tools/base/monitoring/prometheus/adapter/configmap.yaml
+++ b/k8s-configs/cluster-tools/base/monitoring/prometheus/adapter/configmap.yaml
@@ -18,7 +18,7 @@ data:
     rules:
       - seriesQuery: 'nginx_ingress_controller_nginx_process_requests_total{kubernetes_namespace=~"ingress.+"}'
         name: {as: "requests-per-second"}
-        resource:
+        resources:
           overrides:
             namespace: {resource: "kubernetes_namespace"}
             pod: {resource: "controller_pod"}
