--- a/k8s-configs/cluster-tools/base/ingress/nginx/public/hpa.yaml
+++ b/k8s-configs/cluster-tools/base/ingress/nginx/public/hpa.yaml
@@ -29,3 +29,14 @@ spec:
         target:
           type: AverageValue
           value: "30000m"
+    - type: Object
+      object:
+        metric:
+          name: requests-per-second
+        describedObject:
+          apiVersion: networking.k8s.io/v1
+          kind: Ingress
+          name: pingaccess-was-ingress
+        target:
+          type: Value
+          value: 10k
