--- a/k8s-configs/cluster-tools/base/ingress/nginx/public/hpa.yaml
+++ b/k8s-configs/cluster-tools/base/ingress/nginx/public/hpa.yaml
@@ -28,7 +28,7 @@ spec:
           name: nginx_ingress_controller_nginx_process_requests_per_second
         target:
           type: AverageValue
-          value: "30000m"
+          averageValue: "30000m"
     - type: Object
       object:
         metric:
