--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/bootstrap.yaml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/bootstrap.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: opensearch-bootstrap
-        image: public.ecr.aws/r2h3l6e4/pingcloud-monitoring/os-bootstrap/dev:v1.19-release-branch-latest
+        image: 705370621539.dkr.ecr.us-west-2.amazonaws.com/pingcloud-monitoring/os-bootstrap:PDO-6780-stub-indices
         imagePullPolicy: Always
         securityContext:
           runAsNonRoot: true
