Add more permissions to bootstrap user

--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/opensearch/security_configs/roles.yml
@@ -289,6 +289,7 @@ bootstrap:
         - 'indices:admin/index_template/*'
         - 'indices:admin/template/*'
         - 'indices:admin/settings/update'
+        - "indices:admin/create"
         - 'indices:admin/delete'
         - 'indices:admin/resize'
         - 'indices:data/write/index'
