--- a/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/nr.conf
+++ b/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/nr.conf
@@ -119,15 +119,21 @@
 
 # Output
 
+#[OUTPUT]
+#    Name                http
+#    Alias               nr_out
+#    Match               nr.*
+#    Host                logstash-elastic.elastic-stack-logging
+#    Port                8083
+#    Format              json
+#    Retry_Limit         False
+#    compress            gzip
+#    net.keepalive_idle_timeout  10
+#    net.keepalive_max_recycle   100
+#    storage.total_limit_size    1000M
+
 [OUTPUT]
-    Name                http
-    Alias               nr_out
-    Match               nr.*
-    Host                logstash-elastic.elastic-stack-logging
-    Port                8083
-    Format              json
-    Retry_Limit         False
-    compress            gzip
-    net.keepalive_idle_timeout  10
-    net.keepalive_max_recycle   100
-    storage.total_limit_size    1000M
+    Name kafka
+    Match nr.*
+    Brokers logging-kafka-bootstrap.kafka.svc:9092
+    Topics nr
