--- a/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/customer.conf
+++ b/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/customer.conf
@@ -71,15 +71,20 @@
     Use_Kubelet         On
 
 # Output
+# [OUTPUT]
+#    Name                http
+#    Alias               logstash_out
+#    Match               customer.kube.*
+#    Host                logstash-elastic.elastic-stack-logging
+#    Port                8084
+#    Format              json
+#    Retry_Limit         False
+#    compress            gzip
+#    net.keepalive_idle_timeout  10
+#    net.keepalive_max_recycle   100
+#    storage.total_limit_size    1000M
 [OUTPUT]
-    Name                http
-    Alias               logstash_out
-    Match               customer.kube.*
-    Host                logstash-elastic.elastic-stack-logging
-    Port                8084
-    Format              json
-    Retry_Limit         False
-    compress            gzip
-    net.keepalive_idle_timeout  10
-    net.keepalive_max_recycle   100
-    storage.total_limit_size    1000M
+    Name kafka
+    Match customer.kube.*
+    Brokers logging-kafka-bootstrap.kafka.svc:9092
+    Topics customer
