--- a/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/cw.conf
+++ b/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/cw.conf
@@ -213,15 +213,20 @@
 
 # Outputs
 
+#[OUTPUT]
+#    Name                http
+#    Alias               cw
+#    Match               cw.*
+#    Host                logstash-elastic.elastic-stack-logging
+#    Port                8082
+#    Format              json
+#    Retry_Limit         False
+#    compress            gzip
+#    net.keepalive_idle_timeout  10
+#    net.keepalive_max_recycle   100
+#    storage.total_limit_size    1000M
 [OUTPUT]
-    Name                http
-    Alias               cw
-    Match               cw.*
-    Host                logstash-elastic.elastic-stack-logging
-    Port                8082
-    Format              json
-    Retry_Limit         False
-    compress            gzip
-    net.keepalive_idle_timeout  10
-    net.keepalive_max_recycle   100
-    storage.total_limit_size    1000M
+    Name kafka
+    Match cw.*
+    Brokers logging-kafka-bootstrap.kafka.svc:9092
+    Topics cw
