--- a/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/elk.conf
+++ b/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/elk.conf
@@ -86,15 +86,21 @@
     Use_Kubelet         On
 
 # Output
+#[OUTPUT]
+#    Name                http
+#    Alias               logstash_out
+#    Match               elk.kube.*
+#    Host                logstash-elastic.elastic-stack-logging
+#    Port                8080
+#    Format              json
+#    Retry_Limit         False
+#    compress            gzip
+#    net.keepalive_idle_timeout  10
+#    net.keepalive_max_recycle   100
+#    storage.total_limit_size    1000M
+
 [OUTPUT]
-    Name                http
-    Alias               logstash_out
-    Match               elk.kube.*
-    Host                logstash-elastic.elastic-stack-logging
-    Port                8080
-    Format              json
-    Retry_Limit         False
-    compress            gzip
-    net.keepalive_idle_timeout  10
-    net.keepalive_max_recycle   100
-    storage.total_limit_size    1000M
+    Name kafka
+    Match elk.kube.*
+    Brokers logging-kafka-bootstrap.kafka.svc:9092
+    Topics elk
