--- a/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/s3.conf
+++ b/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/s3.conf
@@ -111,15 +111,21 @@
 
 # Output
 
+#[OUTPUT]
+#    Name                http
+#    Alias               s3_app_out
+#    Match               s3.kube.*
+#    Host                logstash-elastic.elastic-stack-logging
+#    Port                8081
+#    Format              json
+#    Retry_Limit         False
+#    compress            gzip
+#    net.keepalive_idle_timeout  10
+#    net.keepalive_max_recycle   100
+#    storage.total_limit_size    1000M
+
 [OUTPUT]
-    Name                http
-    Alias               s3_app_out
-    Match               s3.kube.*
-    Host                logstash-elastic.elastic-stack-logging
-    Port                8081
-    Format              json
-    Retry_Limit         False
-    compress            gzip
-    net.keepalive_idle_timeout  10
-    net.keepalive_max_recycle   100
-    storage.total_limit_size    1000M
+    Name kafka
+    Match s3.kube.*
+    Brokers logging-kafka-bootstrap.kafka.svc:9092
+    Topics s3
