--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/main/01-input.conf
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/main/01-input.conf
@@ -1,9 +1,20 @@
+#input {
+#  http {
+#    port => 8080
+#    add_field => { "cluster_name" => "${CLUSTER_NAME}" }
+#    id => 'main_in'
+#    max_pending_requests => 1000
+#    threads => 2
+#  }
+#}
+
 input {
-  http {
-    port => 8080
-    add_field => { "cluster_name" => "${CLUSTER_NAME}" }
+  kafka {
+    bootstrap_servers => "logging-kafka-bootstrap.kafka.svc:9092"
+    topics => ["s3"]
+    codec => "json"
+    consumer_threads => 2
+    group_id => "logstash"
     id => 'main_in'
-    max_pending_requests => 1000
-    threads => 2
   }
 }
