--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/main/01-input.conf
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/main/01-input.conf
@@ -11,7 +11,7 @@
 input {
   kafka {
     bootstrap_servers => "logging-kafka-bootstrap.kafka.svc:9092"
-    topics => ["s3"]
+    topics => ["elk"]
     codec => "json"
     consumer_threads => 2
     group_id => "logstash"
