--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/main/01-input.conf
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/main/01-input.conf
@@ -16,5 +16,7 @@ input {
     consumer_threads => 2
     group_id => "logstash"
     id => 'main_in'
+    enable_auto_commit => true
+    auto_offset_reset => "earliest"
   }
 }
