--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/customer/01-input.conf
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/customer/01-input.conf
@@ -1,12 +1,26 @@
+#input {
+#  http {
+#    port => 8084
+#    add_field => { "cluster_name" => "${CLUSTER_NAME}" }
+#    id => "customer_in"
+#    max_pending_requests => 1000
+#    threads => 2
+#  }
+#}
+
 input {
-  http {
-    port => 8084
-    add_field => { "cluster_name" => "${CLUSTER_NAME}" }
-    id => "customer_in"
-    max_pending_requests => 1000
-    threads => 2
+  kafka {
+    bootstrap_servers => "logging-kafka-bootstrap.kafka.svc:9092"
+    topics => ["customer"]
+    codec => "json"
+    consumer_threads => 2
+    group_id => "logstash"
+    id => 'main_in'
+    enable_auto_commit => true
+    auto_offset_reset => "earliest"
   }
 }
+
 ### Remove unneeded fields came from fluent-bit
 filter {
 	mutate {
