--- a/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/s3/s3.conf
+++ b/k8s-configs/cluster-tools/base/logging/elastic-stack/logstash/logstash_pipelines/s3/s3.conf
@@ -1,11 +1,25 @@
+#input {
+#  http {
+#    port => 8081
+#    id => "s3_in"
+#    max_pending_requests => 1000
+#    threads => 2
+#  }
+#}
+
 input {
-  http {
-    port => 8081
-    id => "s3_in"
-    max_pending_requests => 1000
-    threads => 2
+  kafka {
+    bootstrap_servers => "logging-kafka-bootstrap.kafka.svc:9092"
+    topics => ["s3"]
+    codec => "json"
+    consumer_threads => 2
+    group_id => "logstash"
+    id => 'main_in'
+    enable_auto_commit => true
+    auto_offset_reset => "earliest"
   }
 }
+
 filter {
       ### Remove unneeded fields came from fluent-bit and set appropriate directory for s3
       mutate {
