Drop kube-rbac-proxy logs

--- a/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/cw.conf
+++ b/k8s-configs/cluster-tools/base/logging/fluentbit/configs/pipelines/cw.conf
@@ -29,7 +29,7 @@
     Name                tail
     Tag                 cw.kube.*
     Path                /var/log/containers/*_elastic-stack-logging_*.log
-    Exclude_Path        *bootstrap*.log
+    Exclude_Path        *bootstrap*.log, *kube-rbac-proxy*.log
     multiline.parser    docker, cri
     DB                  /fluent-bit/state/flb_cw_elastic.db
     Skip_Long_Lines     Off
